task: Rewrite tests in BDD style, and improve test coverage